<resources>
    <string name="app_name">Government Holidays</string>
    <string name="international_mother_language_day">International Mother Language Day</string>
    <string name="_21_02_2022">21–02–2022</string>
    <string name="date">Date</string>
    <string name="month">Month</string>
    <string name="notional_holiday">Notional holiday</string>
    <string name="description">Day is a worldwide annual observance held on 21 February to promote awareness of linguistic and cultural diversity and to promote multilingualism. First announced by UNESCO on 17 November 1999,[1] it was formally recognized by the United Nations General Assembly with the adoption of UN resolution 56/262[2] in 2002. Mother Language Day is part of a broader initiative "to promote the preservation and protection of all languages used by peoples of the world" as adopted by the UN General Assembly on 16 May 2007 in UN resolution 61/266,[3] which also established 2008 as the International Year of Languages.[4][5][6][7] The idea to celebrate International Mother Language Day was the initiative of Bangladesh. In Bangladesh, 21 February is the anniversary of the day when the people of Bangladesh (then East Pakistan) fought for recognition for the Bangla language.[8] It is also celebrated in West Bengal, India.</string>
    <string name="month_view">Month View</string>
    <string name="today">Today</string>
    <string name="no_holiday">No Holiday Found!!</string>
    <string-array name="month_list">
        <item>JAN</item>
        <item>FEB</item>
        <item>MAR</item>
        <item>APR</item>
        <item>MAY</item>
        <item>JUN</item>
        <item>JUL</item>
        <item>AUG</item>
        <item>SEP</item>
        <item>OCT</item>
        <item>NOV</item>
        <item>DEC</item>
    </string-array>


</resources>